Commit the fix again.

BUG: 157108

svn path=/trunk/KDE/kdebase/runtime/; revision=773275